@@ -1,1 +1,1 @@
--t auto -C
+-k -t auto -C
