@@ -1,0 +1,1 @@
+unlink "loader/TiledAuto.tif";
