@@ -1,0 +1,1 @@
+link "loader/testraster2.tif", "loader/TiledAutoSkipNoData.tif";
