@@ -1,0 +1,1 @@
+-t auto -C
